# readar

./: .env.example  .gitignore  .pre-commit-config.yaml  409_DIAGNOSTIC_CHANGES.md  409_FIX_SUMMARY.md  CATALOG_DIAGNOSIS.md  CATALOG_INGESTION_SUMMARY.md  DIAGNOSTICS.md  Makefile  PR_DIFF_SUMMARY.md  PR_IDENTITY_LINKING_FIX.md  README.md  SMOKE_TEST.md  TESTING.md  google-logo.img  index.html  readar-logo.img  render.yaml  style.css  test_api.sh
backend/: .env  .env.example  bulk_update_book_insights.py  check_missing_books.py  debug_check.py  import_book_insights.py  merge_book_seeds.py  pyproject.toml  requirements-scraping.txt  requirements.txt
backend/alembic/: env.py
backend/alembic/versions/: 000000000000_baseline_init_schema.py  1a2b3c4d5e6f_widen_alembic_version.py  2b3c4d5e6f7a_add_case_insensitive_email_constraint.py  3b9a0a068da5_merge_heads.py  3d4e5f6a7b8c_add_free_to_subscriptionstatus_enum.py  (+39 more)
backend/app/: database.py  main.py  models.py  scheduler.py
backend/data/: CATALOG_EXPANSION.md  goodreads_library_export_1000_titles.csv  goodreads_seed.csv
backend/scripts/: README.md  catalog_expansion_workflow.sh  convert_goodreads_to_seed.py  discover_amazon_books.py  ingest_catalog_from_seed.py  prune_migrations.py  restart_backend.sh  seed_production.py
backend/tests/: README.md  TEST_SETUP.md  conftest.py  test_book_status.py  test_dedup_canonical_key.py  test_health.py  test_onboarding.py  test_recommendation_stability.py  test_recommendations_integration.py  test_refresh_paywall.py  test_user_helpers.py  test_user_helpers_identity_linking.py
(+203 files in other folders)
